# digital-evolution-sandbox

./: .gitignore  README.md  pyproject.toml
context/: 2026-06-11-16-10-design.md  2026-06-12-14-55-three-pool-primitives.md
context/design/: primitive-roster.md
docs/mockups/: main-screen-live.html  main-screen.html  ui-variants-carousel.html  ui-variants-carousel.js  v3-enhanced.html  v3-enhanced.js
docs/plans/: 2026-06-20-engine.md
docs/specs/: 2026-06-20-engine-design.md
scripts/: analyze_batch.py  check_cuda.py  diag_arb_curve.py  diag_arb_sections.py  diag_recorder.py  run_batch.py  run_match.py
src/des/: _a_pool.py  engine.py  phenotype_cache.py  recorder.py  registry.py  run.py  types.py  world.py
tests/: test_a_pool.py  test_acceptance.py  test_analyze_batch.py  test_antagonism.py  test_arbitration.py  test_arbitration_moments.py  test_arbitration_properties.py  test_arbitration_vec_equiv.py  test_direction_kinds.py  test_drilldown.py  test_engine.py  test_frame.py  test_gap_fill.py  test_hash_dirs.py  test_integration.py  test_kernel_common.py  test_motif.py  test_multi_p_blend.py  test_multi_slot.py  test_phase_windows.py  test_phenotype_cache.py  test_readouts.py  test_recorder.py  test_registry.py  test_reproduction.py  test_run_config.py  test_run_match.py  test_server_config.py  test_smoke.py  test_spectrum_shape.py  test_threshold_predicates.py  test_types.py  test_vis.py  test_world.py  test_world_layout.py
webapp/: README.md  drilldown.py  frame.py  readouts.py  server.py
webapp/frontend/: astro.config.mjs  package-lock.json  package.json
(+50 files in other folders)
